fixed link overflow

--- a/style.css
+++ b/style.css
@@ -72,6 +72,8 @@ h1 {
 	padding-right: 10vw;
 	padding-bottom: 100px;
 	clip-path: polygon(0vw 1.25vw,1.25vw 0vw,2.5vw 1.25vw,3.75vw 0vw,5vw 1.25vw,6.25vw 0vw,7.5vw 1.25vw,8.75vw 0vw,10vw 1.25vw,11.25vw 0vw,12.5vw 1.25vw,13.75vw 0vw,15vw 1.25vw,16.25vw 0vw,17.5vw 1.25vw,18.75vw 0vw,20vw 1.25vw,21.25vw 0vw,22.5vw 1.25vw,23.75vw 0vw,25vw 1.25vw,26.25vw 0vw,27.5vw 1.25vw,28.75vw 0vw,30vw 1.25vw,31.25vw 0vw,32.5vw 1.25vw,33.75vw 0vw,35vw 1.25vw,36.25vw 0vw,37.5vw 1.25vw,38.75vw 0vw,40vw 1.25vw,41.25vw 0vw,42.5vw 1.25vw,43.75vw 0vw,45vw 1.25vw,46.25vw 0vw,47.5vw 1.25vw,48.75vw 0vw,50vw 1.25vw,51.25vw 0vw,52.5vw 1.25vw,53.75vw 0vw,55vw 1.25vw,56.25vw 0vw,57.5vw 1.25vw,58.75vw 0vw,60vw 1.25vw,61.25vw 0vw,62.5vw 1.25vw,63.75vw 0vw,65vw 1.25vw,66.25vw 0vw,67.5vw 1.25vw,68.75vw 0vw,70vw 1.25vw,71.25vw 0vw,72.5vw 1.25vw,73.75vw 0vw,75vw 1.25vw,76.25vw 0vw,77.5vw 1.25vw,78.75vw 0vw,80vw 1.25vw,81.25vw 0vw,82.5vw 1.25vw,83.75vw 0vw,85vw 1.25vw,86.25vw 0vw,87.5vw 1.25vw,88.75vw 0vw,90vw 1.25vw,91.25vw 0vw,92.5vw 1.25vw,93.75vw 0vw,95vw 1.25vw,96.25vw 0vw,97.5vw 1.25vw,98.75vw 0vw,100vw 1.25vw,100% 100%, 0% 100%);
+
+	word-wrap: break-word;
 }
 .cards {
 	display: flex;
